<resources>
    <string name="app_name">BetterDay</string>
    <string name="current_language">English</string>
    <string name="english">English</string>
    <string name="portuguese">Portuguese</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="username_error">Username must have at least 5 characters</string>
    <string name="password_length_error">Password must be at least 6 characters long.</string>
    <string name="password_complexity_error">Password must contain at least one capital letter and one number.</string>
    <string name="login_success">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="empty_fields_error">Username, email, or password cannot be empty</string>
    <string name="email_error">Invalid email address</string>
    <string name="email_in_use">Email is already in use</string>
    <string name="username_in_use">Username is already in use</string>
    <string name="registration_success">Registration successful</string>
    <string name="registration_failed">Registration failed</string>
    <string name="logout_successful">Logout successful</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change Language</string>
    <string name="logout">Logout</string>
    <string name="today_fragment">Today</string>
    <string name="add_new_objective_button_context">Add new objective</string>
    <string name="cat_image_context">Image of a cat from the API</string>
    <string name="objectives_today_title">Today\'s Objectives</string>
    <string name="cat_title">Cat of Positivity</string>
    <string name="cat">Cat</string>
    <string name="catPositivity">Hope you have an amazing day.\nYou got this!</string>
    <string name="about_app">About the App</string>
    <string name="close">Close</string>
    <string name="about_app_master">Mestrado de Engenharia Informática</string>
    <string name="about_app_idc">Internet das Coisas</string>
    <string name="about_app_dama">Desenvolvimento de Aplicações Móveis Avançadas</string>
    <string name="about_app_year">2023/24</string>
    <string name="about_app_creators_title">Creators:</string>
    <string name="about_app_creators">Luís Costa - Nº 25647\nPaulo Peixoto - Nº 26097</string>
    <string name="about_app_libraries_title">Frameworks and Libraries Used:</string>
    <string name="about_app_libraries">Retrofit\nKotlinx.Coroutines\nCameraX\nPicasso\nCircleImageView\nCATAAS API</string>
    <string name="default_user_title">Default User Credentials:</string>
    <string name="default_user_credentials">Username: defaultUser\nPassword: defaultPass1</string>
    <string name="show_password">Show Password</string>
    <string name="hide_password">Hide Password</string>
    <string name="create_a_new_objective">Create a New Objective</string>
    <string name="title_new_objective_creation">Title</string>
    <string name="enter_your_objective_title">Enter your objective title</string>
    <string name="description_new_objective_creation">Description</string>
    <string name="enter_your_objective_description">Enter your objective description</string>
    <string name="save_new_objective">Save New Objective</string>
    <string name="empty_title_toast">Objective title cannot be empty</string>
    <string name="empty_description_toast">Objective description cannot be empty</string>
    <string name="new_objective_saved_toast">Objective saved successfully</string>
    <string name="error_saving_new_objective_toast">Error saving the new objective</string>
    <string name="confirm_logout">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="objectives">Objectives</string>
    <string name="new_objective">New Objective</string>
    <string name="camera_take_photo_button">Take Photo</string>
    <string name="permission_request_to_use_camera_denied">Permission request to use camera denied</string>
    <string name="photo_capture_succeeded">Photo capture succeeded</string>
    <string name="default_location_ipt">Room O103, IPT. This is the default location, check the defined coordinates for the actual location if this is not the desired one</string>
    <string name="incentive_message_incredible">Incredible! You\'ve completed all your objectives!</string>
    <string name="incentive_message_great_job">Great job! You\'re almost there!</string>
    <string name="incentive_message_doing_well">You\'re doing well! Keep going!</string>
    <string name="incentive_message_good_start">Good start! Keep up the good work!</string>
    <string name="incentive_message_get_started">Let\'s get started! Begin by completing your first objective!</string>
    <string name="objective_detail_completed">Completed</string>
    <string name="objective_detail_not_completed">Not Completed</string>
    <string name="toast_objective_id_not_provided">Objective id not provided</string>
    <string name="toast_objective_not_found">Objective not found</string>
    <string name="toast_objective_deleted_success">Objective deleted successfully</string>
    <string name="toast_failed_to_delete_objective">Failed to delete objective</string>
    <string name="button_edit_objective">Edit</string>
    <string name="button_delete_objective">Delete</string>
    <string name="creation_date_label">Creation Date</string>
    <string name="status_label">Status</string>
    <string name="go_back">Go Back</string>
    <string name="cancel">Cancel</string>
    <string name="edit_objective">Edit Objective</string>
    <string name="save">Save</string>
    <string name="delete_objective">Delete Objective</string>
    <string name="confirm_delete_objective">Are you sure you want to delete this objective?</string>
    <string name="requirements_title">Requirements</string>
    <string name="requirements">Username must have at least 5 characters.\nPassword must have at least 6 characters, with at least one capital letter and one number.</string>
    <string name="no_objectives_message">No objectives to display. Tap the button below to create a new objective.</string>
    <string name="gps_permission_granted">GPS Permission Granted</string>
    <string name="gps_permission_denied">GPS Permission Denied</string>
    <string name="image_is_worth">A picture is worth a thousand words.</string>
    <string name="what_made_you_smile">What made you smile today?</string>
    <string name="take_photo_of_inspiration">Take a photo of what inspires you.</string>
    <string name="travel_companion_title">Travel Companion</string>
    <string name="travel_companion">Travel Companion</string>
    <string name="last_position">Last Moment Experienced:</string>
    <string name="capture_the_moment">Capture the Moment</string>
    <string name="check_googlemaps">Open GoogleMaps</string>
    <string name="successfully_updated_objectives_for_user">Successfully updated objectives.</string>
    <string name="failed_to_update_current_date_for_user">Failed to update current date for user.</string>
    <string name="no_objectives_were_updated_for_user">No objectives were updated for user.</string>
    <string name="last_known_location_not_found">Last known location not found</string>
    <string name="permission_granted">Permission Granted</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="no_app_available_to_handle_this_action">No app available to handle this action</string>
</resources>