<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="12dp">

    <TextView
        android:id="@+id/text_about_app_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/about_app_master"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_about_app_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about_app_idc"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_about_app_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/about_app_dama"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_about_app_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about_app_year"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_about_app_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/about_app_creators_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_about_app_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about_app_creators"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/text_about_app_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/about_app_libraries_title"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text_about_app_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/about_app_libraries"
        android:textSize="18sp" />
</LinearLayout>
