<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".ui.fragment.PhotoFragment">

    <!-- TextView for the title -->
    <TextView
        android:id="@+id/travelCompanionTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/travel_companion"
        android:textSize="24sp"
        android:textStyle="bold" />


    <TextView
        android:id="@+id/image_is_worth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:text="@string/image_is_worth"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/what_made_you_smile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="15dp"
        android:text="@string/what_made_you_smile"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/take_photo_of_inspiration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/take_photo_of_inspiration"
        android:textSize="15sp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewObjectiveDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:cardCornerRadius="16dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/last_values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:paddingBottom="20dp"
                android:text="@string/last_position"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/GPS_Values"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:text=""
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/GPS_GOOGLE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="@color/blue"
                android:text="@string/check_googlemaps"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/buttonTakePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:backgroundTint="@color/blue"
        android:text="@string/capture_the_moment"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>
