<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="35dp"
    tools:context=".ui.fragment.CatsFragment">

    <!-- TextView for the title -->
    <TextView
        android:id="@+id/catTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="30dp"
        android:text="@string/cat_title"
        android:textSize="24sp"
        android:textStyle="bold" />

    <!-- CircleImageView for displaying the cat photo in a circular form
    Credit: https://github.com/hdodenhof/CircleImageView
    -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/catImageView"
        android:layout_width="280dp"
        android:layout_height="280dp"
        android:layout_gravity="center"
        android:contentDescription="@string/cat_image_context"
        android:src="@drawable/baseline_pets_24" />

    <!-- TextView for the text of positivity -->
    <TextView
        android:id="@+id/catPositivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/catPositivity"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>